Update Index.html content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   <title>Meg's Phenomenal Website</title>
 </head>
 <body>
-How to do
+  <h1>Meg's Haiku</h1>
+
+  <p>I am so sleepy.</p>
+  <p>My cat is a morning guy;</p>
+  <p>Harsh, furry sadist.</p>
+
+Preferred foods:
+<ol>
+  <li>Sushi</li>
+  <li>Kalbi</li>
+  <li>Mexican</li>
+  <li>Korean</li>
+  <li>Chinese</li>
+</ol>
+
+Farm animals:
+<ul>
+  <li>Goats</li>
+  <li>Sheep</li>
+  <li>Cows</li>
+  <li>Horses</li>
+  <li>Ducks</li>
+</ul>
+
 </body>
 </html>
