--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Meg's Phenomenal Website</title>
+  <title>Meg's Website</title>
 </head>
 <body>
-  <h1>Meg's Haiku</h1>
+  <h1>Meg's Haikus</h1>
 
   <p>I am so sleepy.</p>
   <p>My cat is a morning guy;</p>
   <p>Harsh, furry sadist.</p>
 
-Preferred foods:
+Programming Languages:
 <ol>
-  <li>Sushi</li>
-  <li>Kalbi</li>
-  <li>Mexican</li>
-  <li>Korean</li>
-  <li>Chinese</li>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
 </ol>
 
-Farm animals:
+Favorite Foods:
 <ul>
-  <li>Goats</li>
-  <li>Sheep</li>
-  <li>Cows</li>
-  <li>Horses</li>
-  <li>Ducks</li>
+  <li>Sushi</li>
+  <li>Korean</li>
+  <li>Chinese</li>
 </ul>
+
+<img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
+
+<a href="blog/">Blog</a>
 
 </body>
 </html>
