Add stylesheet to css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>Meg's Website</title>
+  <link rel="stylesheet" href="theme/style.css">
+
+  </style>
 </head>
 <body>
-  <h1>Meg's Haikus</h1>
+  <div>
+  <h1>Meg's Haiku</h1>
 
-  <p>I am so sleepy.</p>
-  <p>My cat is a morning guy;</p>
-  <p>Harsh, furry sadist.</p>
+  <p class="slanted">I am so sleepy.</p>
+  <p id="emphatic">My cat is a morning guy;</p>
+  <p class="slanted">Harsh, furry sadist.</p>
+</div>
 
 Programming Languages:
 <ol>
@@ -25,6 +31,8 @@ Favorite Foods:
   <li>Sushi</li>
   <li>Korean</li>
   <li>Chinese</li>
+  <li>Indian</li>
+  <li>Thai</li>
 </ul>
 
 <img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
