Add garish styles to blog & home

--- a/index.html
+++ b/index.html
@@ -10,23 +10,42 @@
 
   </style>
 </head>
+
 <body>
+
+  <div class="navigation">
+    <ul>
+      <li>
+        <a href="blog">Meg's Page</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="header" id="myheader">
+    <h1>Meg's Website</h1>
+    <img src="MegNYC.jpg" alt="Meg's photo">
+    <p class="font-weight: bold;">Hi! I'm Meg. I'm a landscape designer. I love to garden, read, play nerdy games, hike, cook, and make fermented foods.</p>
+  </div>
+
   <div>
-  <h1>Meg's Haiku</h1>
+  <h2>My Haiku</h2>
 
   <p class="slanted">I am so sleepy.</p>
   <p id="emphatic">My cat is a morning guy;</p>
   <p class="slanted">Harsh, furry sadist.</p>
-</div>
+  </div>
 
-Programming Languages:
+<div class="ol" id="my#list">
+
+Programming languages I am learning:
 <ol>
   <li>HTML</li>
   <li>CSS</li>
   <li>JavaScript</li>
 </ol>
+</div>
 
-Favorite Foods:
+Favorite foods I crave:
 <ul>
   <li>Sushi</li>
   <li>Korean</li>
@@ -37,7 +56,9 @@ Favorite Foods:
 
 <img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
 
-<a href="blog/">Blog</a>
+
+<a href="blog/">Meg's Blog</a>
+<footer>Copyright: Meg Shelley 2017</footer>
 
 </body>
 </html>
