add style to blog & Meg's website

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 
   </style>
 </head>
-
 <body>
 
   <div class="navigation">
     <ul>
       <li>
-        <a href="blog">Meg's Page</a>
+        <a href="blog">Meg's Blog</a>
       </li>
     </ul>
   </div>
 
-  <div class="header" id="myheader">
+  <div class="header1" id="myheader">
     <h1>Meg's Website</h1>
-    <img src="MegNYC.jpg" alt="Meg's photo">
-    <p class="font-weight: bold;">Hi! I'm Meg. I'm a landscape designer. I love to garden, read, play nerdy games, hike, cook, and make fermented foods.</p>
+    <img src="../MegNYC.jpg" alt="Meg's photo">
+    <div class="header1-content"
+    <p>Hi! I'm Meg. I'm a landscape designer. I love to garden, read, play nerdy games, hike, cook, and make fermented foods.</p>
+    </div>
   </div>
 
-  <div>
+  <div id="haiku">
   <h2>My Haiku</h2>
 
-  <p class="slanted">I am so sleepy.</p>
-  <p id="emphatic">My cat is a morning guy;</p>
-  <p class="slanted">Harsh, furry sadist.</p>
+  <p>I am so sleepy.</p>
+  <p>My cat is a morning guy;</p>
+  <p>Harsh, furry sadist.</p>
   </div>
 
 <div class="ol" id="my#list">
-
 Programming languages I am learning:
 <ol>
   <li>HTML</li>
@@ -45,6 +45,7 @@ Programming languages I am learning:
 </ol>
 </div>
 
+<div class="ul" id="mylist">
 Favorite foods I crave:
 <ul>
   <li>Sushi</li>
@@ -53,6 +54,7 @@ Favorite foods I crave:
   <li>Indian</li>
   <li>Thai</li>
 </ul>
+</div>
 
 <img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
 
