update navigation bar to 100vw

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Meg's Website</title>
+  <title>Meg's Profile</title>
   <link rel="stylesheet" href="theme/style.css">
 
   </style>
@@ -13,22 +13,23 @@
 <body>
 
   <div class="navigation">
-    <ul>
+    <ul class="container">
       <li>
         <a href="blog">Meg's Blog</a>
       </li>
     </ul>
   </div>
 
-  <div class="header1" id="myheader">
-    <h1>Meg's Website</h1>
+  <div class="header1 container">
+    <h1>Meg's Profile</h1>
     <img src="../MegNYC.jpg" alt="Meg's photo">
-    <div class="header1-content"
-    <p>Hi! I'm Meg. I'm a landscape designer. I love to garden, read, play nerdy games, hike, cook, and make fermented foods.</p>
-    </div>
   </div>
 
-  <div id="haiku">
+  <div class="header1-content container">
+    <p>Hi! I'm Meg. I'm a landscape designer. I love to garden, read, play nerdy games, hike, cook, and make fermented foods.</p>
+  </div>
+
+  <div class="haiku container">
   <h2>My Haiku</h2>
 
   <p>I am so sleepy.</p>
@@ -36,7 +37,7 @@
   <p>Harsh, furry sadist.</p>
   </div>
 
-<div class="ol" id="my#list">
+<div class="languages" id="my#list">
 Programming languages I am learning:
 <ol>
   <li>HTML</li>
@@ -45,7 +46,7 @@ Programming languages I am learning:
 </ol>
 </div>
 
-<div class="ul" id="mylist">
+<div class="foods" id="mylist">
 Favorite foods I crave:
 <ul>
   <li>Sushi</li>
@@ -60,7 +61,9 @@ Favorite foods I crave:
 
 
 <a href="blog/">Meg's Blog</a>
-<footer>Copyright: Meg Shelley 2017</footer>
+<div class="footer">
+  <footer>Copyright: Meg Shelley 2017</footer>
+</div>
 
 </body>
 </html>
