create choose own adventure runStory in js

--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
 
   <title>Meg's Profile</title>
   <link rel="stylesheet" href="theme/style.css">
-
   </style>
 </head>
 <body>
-
   <div class="navigation">
+    <div id="menu">
+      MENU
+    </div>
+      </menu>
     <ul class="container">
       <li>
         <a href="blog">Meg's Blog</a>
       </li>
-    </ul>
+      <li>
+        <a href="contact">Meg's Contact</a>
+      </li>  </ul>
   </div>
 
   <div class="header1 container">
     <h1>Meg's Profile</h1>
+  </div>
+
+  <div>
     <img src="../MegNYC.jpg" alt="Meg's photo">
   </div>
 
@@ -30,40 +37,40 @@
   </div>
 
   <div class="haiku container">
-  <h2>My Haiku</h2>
-
-  <p>I am so sleepy.</p>
-  <p>My cat is a morning guy;</p>
-  <p>Harsh, furry sadist.</p>
+    <h2 class="haikuheader container">My Haiku</h2>
+    <p>I am so sleepy.</p>
+    <p>My cat is a morning guy;</p>
+    <p>Harsh, furry sadist.</p>
   </div>
 
-<div class="languages" id="my#list">
-Programming languages I am learning:
-<ol>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
-</ol>
+  <div class="languages" id="my#list">
+  <p class="languagesheader">Programming languages I am learning:</p>
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+  </ol>
 </div>
 
-<div class="foods" id="mylist">
-Favorite foods I crave:
-<ul>
-  <li>Sushi</li>
-  <li>Korean</li>
-  <li>Chinese</li>
-  <li>Indian</li>
-  <li>Thai</li>
-</ul>
-</div>
+  <div class="foods" id="mylist">
+    <p class="foodsheader">Favorite foods:</p>
+    <ul>
+      <li>Sushi</li>
+      <li>Korean</li>
+      <li>Chinese</li>
+      <li>Indian</li>
+      <li>Thai</li>
+    </ul>
+  </div>
 
-<img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
+  <img src="https://avatars3.githubusercontent.com/u/29267726?v=4&s=460" alt="My favorite image!">
 
+  <a href="blog/">Meg's Blog</a>
 
-<a href="blog/">Meg's Blog</a>
-<div class="footer">
-  <footer>Copyright: Meg Shelley 2017</footer>
-</div>
+  <div class="footer">
+    <footer>Copyright 2017 Meg Shelley</footer>
+  </div>
 
+    <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
