add jQuery to blog script.js

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <footer>Copyright 2017 Meg Shelley</footer>
   </div>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
