--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
     </a>
   </div>
   <div class="header-contact">
-    <h1>Contact Me, please!</h1>
+    <h1>Contact Me!</h1>
   </div>
     <div id="content">
       <form method="POST" action="https://formspree.io/megshelley@ymail.com">
@@ -47,7 +47,8 @@
             <option value="email">Email</option>
           </optgroup>
           <optgroup label="In-Person">
-            <option value="networking">We met at a networking event</option>              <option value="referral">Personal referral</option>
+            <option value="networking">We met at a networking event</option>
+            <option value="referral">Personal referral</option>
             <option value="random">We met somewhere else</option>
           </optgroup>
           <option value="other">Other</option>
