Add photo properly to theme images folder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <div>
-    <img src="../MegNYC.jpg" alt="Meg's photo">
+    <img src="theme/images/MegNYC.jpg" alt="Meg's photo">
   </div>
 
   <div class="header1-content container">
